# Chess_game_cpp

./: CMakeLists.txt  Makefile  zadani.md  zadani.txt
assets/: README.md
src/Application/: CApplication.cpp  CApplication.h  CMenu.cpp  CMenu.h  Constants.h  EDir.h  EState.h  messages.h
src/Builders/: CBoardGenerator.cpp  CBoardGenerator.h  CBoardLoader.cpp  CBoardLoader.h  CBoardSaver.cpp  CBoardSaver.h
src/Chessman/: CBishop.cpp  CBishop.h  CChessman.cpp  CChessman.h  CKing.cpp  CKing.h  CKnight.cpp  CKnight.h  CPawn.cpp  CPawn.h  CQueen.cpp  CQueen.h  CRook.cpp  CRook.h
src/Game/: CBoard.cpp  CBoard.h  CField.cpp  CField.h  CGame.cpp  CGame.h  CRules.cpp  CRules.h
src/Main/: main.cpp
src/Move/: CMove.cpp  CMove.h  ranks.h
src/Player/: CBeginner.cpp  CBeginner.h  CHuman.cpp  CHuman.h  CLegend.cpp  CLegend.h  CPlayer.cpp  CPlayer.h  CPro.cpp  CPro.h
